--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hunspell-br (0.12-1) unstable; urgency=low
+
+  * Upstream release (Closes: #714992).
+
+ -- Elie Roux <elie.roux@telecom-bretagne.eu>  Fri, 27 February 2015 18:27:25 +0100
+
 hunspell-br (0.11-1) unstable; urgency=low
 
   * Initial release (Closes: #714992).
