minor updated for debian files

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 hunspell-br (0.12-1) unstable; urgency=low
 
-  * Upstream release (Closes: #714992).
+  * New upstream release.
 
  -- Elie Roux <elie.roux@telecom-bretagne.eu>  Fri, 27 February 2015 18:27:25 +0100
 
