fix changelog date format

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,17 @@
+hunspell-br (0.12-2) unstable; urgency=low
+
+  * Fix changelog date format (Closes: #795140).
+
+ -- Elie Roux <elie.roux@telecom-bretagne.eu>  Tue, 18 Aug 2015 09:22:28 +0200
+
 hunspell-br (0.12-1) unstable; urgency=low
 
   * New upstream release.
 
- -- Elie Roux <elie.roux@telecom-bretagne.eu>  Fri, 27 February 2015 18:27:25 +0100
+ -- Elie Roux <elie.roux@telecom-bretagne.eu>  Fri, 27 Feb 2015 18:27:25 +0100
 
 hunspell-br (0.11-1) unstable; urgency=low
 
   * Initial release (Closes: #714992).
 
- -- Elie Roux <elie.roux@telecom-bretagne.eu>  Fri, 5 July 2013 10:55:57 +0200
+ -- Elie Roux <elie.roux@telecom-bretagne.eu>  Fri, 5 Jul 2013 10:55:57 +0200
